Fix: text alignment when days, hours is 00

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: 1.25em;
+  margin: 1.2em;
   transform: translate(-1px, -5px);
 }
 
